[package]
name = "bytepath"
version = "0.1.0"
authors = ["Sebastian Richter <sebastian.richter@paessler.com>"]
edition = "2021"

build = "build.rs"

[dependencies]
bevy_ecs = "0.7.0"

[dependencies.rand]
version = "0.8"
features = ["small_rng"]

[dependencies.specs]
version = "0.17"
features = ["specs-derive"]

[dependencies.sdl2]
version = "0.34"
default-features = false

[build-dependencies.gl_generator]
version = "0.14.0"
