[package]
name = "bytepath"
version = "0.1.0"
authors = ["Sebastian Richter <sebastian.richter@paessler.com>"]
edition = "2021"

build = "build.rs"

[dependencies]
bevy_ecs = "0.7.0"

[dependencies.rand]
version = "0.8"
features = ["small_rng"]

[dependencies.sdl2]
version = "0.35.0"

[dependencies.glam]
version = "0.20.0"

[dependencies.lyon]
version = "0.17.10"

[build-dependencies.gl_generator]
version = "0.14.0"
