[package]
name = "bytepath"
version = "0.1.0"
authors = ["Sebastian Richter <sebastian.richter@paessler.com>"]
edition = "2021"

build = "build.rs"

[dependencies]
bevy_ecs = "0.9.1"

[dependencies.rand]
version = "0.8.0"
features = ["small_rng"]

[dependencies.sdl2]
version = "0.35.0"

[dependencies.glam]
version = "0.22.0"

[dependencies.lyon]
version = "1.0.0"

[build-dependencies.gl_generator]
version = "0.14.0"

[dependencies.freetype-rs]
version = "0.32.0"